# fastapi-fullstack

./: .gitignore  dev.sh  main.py  pyproject.toml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: main.tsx
frontend/src/pages/: Home.tsx
