# [tool.poetry]
# name = "fastapi-fullstack"
# version = "0.1.0"
# description = ""
# authors = ["Your Name <you@example.com>"]

# [tool.poetry.dependencies]
# python = "^3.9"
# fastapi = "^0.68.0"
# uvicorn = "^0.15.0"
# react-scripts = "^4.0.3"

# [tool.poetry.dev-dependencies]

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"


[project]
name = "fastapi-fullstack"  # 项目名称
version = "0.1.0"           # 项目版本
requires-python = ">=3.14"
description = "A FastAPI + Next.js fullstack project"  # 项目描述
dependencies = [
    "fastapi[standard]>=0.128.0",
    "uvicorn[standard]>=0.40.0",
]
